--- a/question/index.html
+++ b/question/index.html
@@ -12,7 +12,7 @@
 <div class="main clear">
 	<div class="topmain"><div class="logo"><img src="images/logo.png"></div><div class="title">妙味课堂常见问题解答</div></div>
     <div class="contMain clear">
-    	<div class="menu" id="menu">123</div>
+    	<div class="menu" id="menu"></div>
         <div class="stopTop" id="stop">
         	课程咨询顾问：<br>
             QQ：3315116152<br>
